Finalizando detalles a YM Maquetadora Web

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!--Fin contenido principal <main> contenedor de servicios-->
 <!--Inicio contacto >>> Formulario de contacto -->
     <section>
-        <h2>Contacto</h2>
+        <h2 class="contacto">Contacto</h2>
         <form class="formulario">
             <fieldset>
                 <legend> Contactame llenando todos los campos </legend>
@@ -92,7 +92,7 @@
 <!--Fin contacto >>> Formulario de contacto -->
 <!--Inicio pie de página Footer-->
 <footer class="footer">
-    <p> &copy; Todos los derechos reservados Yulia Monti </p>
+    <p> &copy; Todos los derechos reservados Yulia Monti 2022 </p>
 </footer>
 <!--Fin pie de página Footer-->
 </body>
