Editando mas sobre mi

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor"> <!--Menú de Navegación-->
             <a href="*">Inicio</a>
-            <a href="*">Sobre Mi</a>
+            <a href="./html/nosotros.html">Sobre Mi</a>
             <a href="*">Clientes</a>
             <a href="*">Contacto</a>
         </nav>
@@ -41,12 +41,12 @@
         <section class="diseño-web sombra">
             <img src="./imagenes/buscador.png" width="60">
             <h3>Diseño Web</h3> <!-- Servicio Diseño Web-->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ex voluptates atque iste sint itaque voluptate deserunt, nulla illum autem!</p>
+                <p>Construyo, gestiono y administro Páginas Web adaptadas a la necesidad del cliente, totalmente responsive, es decir, que podrá verse desde cualquier dispositivo; Tablet, Smartphone u ordenador.</p>
         </section>
         <section class="fotografia sombra"> <!--Servicio Fotografía-->
             <img src="./imagenes/edicion-de-fotos.png" width="60">
-            <h3>Fotografía</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ex voluptates atque iste sint itaque voluptate deserunt, nulla illum autem!</p>
+            <h3>Estudios</h3>
+                <p>Html5, Css, Sass, Frameworks, Git, Github, Seo, Google Ads, Wordpress, Fotografía, Photoshop, Lightroom, Composición.</p>
         </section>
         <section class="ecommerce sombra"> <!--Servicio E-commerce-->
             <img src="./imagenes/las-compras-en-linea.png" width="60">
