--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -7,6 +7,7 @@
     <title>Nosotros</title>
 </head>
 <body>
-    <h1>Sobre Nosotros</h1>
+    <h1>Sobre Mi</h1>
+    <p> Mi nombre es Yulia, soy de la Localidad de Amenábar, Provincia de Santa Fé, Argentina. A los 18 años decidí mudarme a Buenos Aires, Capital Federal, Barrio Almagro, allí viví durante tres años mientras estudié Instrumentación Quirúrgica, carrera la cual ejercí hasta el año 2021. En el año 2008, una vez terminada la carrera tuve mi primer empleo en la Ciudad de Venado Tuerto. En 2012 decidí mudarme a la Ciudad de Rosario, Ciudad en la que actualmente resido. Desde que llegué a la Ciudad soy aficionada a la Fotografía, profesión de la cual trabajan mis padres. La fotografía, la cual es mi hobbie, llevó a interiorizarme sobre lo grandioso que es tener una Página en Web en donde se pueda compartir lo que te gusta hacer. </p>
 </body>
 </html>
