--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maquetadora Web</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&family=Fredoka:wght@300;500&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <header> <!--Head-->
-        <h1 class="titulo-yulia">Yulia Monti <span class="titulo contenedor"> Maquetadora Web </span> </h1>
+    <header class="titulo-yulia"> <!--Head-->
+        <h1 class="titulo-yulia animate__animated animate__backInLeft">Yulia Monti <span class="titulo contenedor animate__animated animate__backInRight"> Maquetadora Web </span> </h1>
     </header>
 
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor"> <!--Menú de Navegación-->
-            <a href="*">Inicio</a>
+            <a href="./index.html">Inicio</a>
             <a href="./html/nosotros.html">Sobre Mi</a>
-            <a href="*">Clientes</a>
-            <a href="*">Contacto</a>
+            <a href="./html/clientes.html">Clientes</a>
+            <a href="./html/contacto.html">Contacto</a>
         </nav>
-</div>
+    </div>
     <section class="hero"> <!--Sección diseño y desarrollo web + Ubicación (Rosario)-->
         <div class="contenido-hero">
                 <h2> Diseño y Desarrollo Web</h2> 
