--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maquetadora Web</title>
+    <title>Yulia Monti</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,128 +12,124 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-<!--Header, titulo + menu de navegacion-->
 <header> 
-<!--Header titulo-->
         <div class="titulo-yulia"> 
-            <h1 class="titulo-yulia animate__animated animate__backInLeft">Yulia Monti <span class="titulo contenedor animate__animated animate__backInRight"> Maquetadora Web </span> </h1>
+            <h1 class="titulo-yulia animate__animated animate__backInLeft"> Yulia Monti 
+            <span class="titulo contenedor animate__animated animate__backInRight"> FrontEnd Developer</span> </h1>
         </div>
-<!--Menú de Navegación-->
-        <div class="nav-bg">
-            <nav class="navegacion-principal contenedor"> 
-                <a href="./index.html">Inicio</a>
+
+        <div class="mobile-menu">
+            <img src="imagenes/menuHamgur.png" alt="icono menu responsive">
+        </div>
+
+        <div>
+            <nav class="navegacion-principal flex contenedor"> 
+                <a href="/">Inicio</a>
                 <a href="#sobre-mi">Sobre Mi</a>
                 <a href="#proyectos">Proyectos</a>
-                <a href="#contacto">Contacto</a>
+            <!--<a href="#contacto">Contacto</a>--> 
             </nav>
         </div>
 </header>
-<!--Sección diseño y desarrollo web + Ubicación (Rosario)-->
+
 <section class="hero"> 
         <div class="contenido-hero">
-                <h2> Diseño y Desarrollo Web</h2> 
+                <h2> Estudiante Full Stack </h2> 
                 <!--Icono de tablericons-->
-                <p> <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#4cc5d8" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <a href="https://goo.gl/maps/PFQ5Ef6KS5SoAGTm8" target="_blank"><p> 
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#4cc5d8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                     <circle cx="12" cy="11" r="3" />
                     <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-                    </svg>
-                Rosario, Santa Fé, Argentina</p>
-                <a class="boton" href="*">Contactar</a>
+                    </svg> Rosario, Santa Fé, Argentina </p></a> 
+                <a href="http://www.linkedin.com/in/yuliamonti" class="boton" target="_blank" > Contactar <img src="imagenes/linkedin.png" width="28" height="28" class="contactar"> </a>
 </section>
-<!--Contenido principal SERVICIOS-->
+
 <main> 
-        <h2>Mis Servicios</h2>
+        <h2>Habilidades</h2>
         <div class="servicios">
             <section class="diseño-web sombra">
-                <img src="./imagenes/buscador.png" width="60">
-                <h3>Diseño Web</h3> <!-- Servicio Diseño Web-->
-                <p>Construyo, gestiono y administro Páginas Web adaptadas a la necesidad del cliente, totalmente responsive, es decir, que podrá verse desde cualquier dispositivo; Tablet, Smartphone u ordenador.</p>
+                <h3 class="habilidades">Adquiridas</h3>
+                <img src="imagenes/html-5.png" width="60" alt="Icono">
+                <img src="imagenes/css.png" width="60" alt="Icono">
+                <img src="imagenes/sass.png" width="60" alt="Icono">
+                <img src="imagenes/git.png" width="60" alt="Icono">
+                <img src="imagenes/github.png" width="60" alt="Icono">
+                <img src="imagenes/bootstrap-logo-shadow.png" width="60" alt="Icono">
+                <img src="imagenes/figma.png" width="60" alt="Icono">
+                <img src="imagenes/wordpress.png" width="60" alt="Icono">
+                <img src="imagenes/javascript.png" width="60" alt="Icono">
+                <img src="imagenes/mysql-.png" width="60" alt="Icono">
+                <img src="imagenes/mysql.png" width="60" alt="Icono">
+                <img src="imagenes/nodejs.png" width="60" alt="Icono">
+                <img src="imagenes/php.png" width="60" alt="Icono">
+                <img src="imagenes/adwords.png" width="60" alt="Icono">
+                <img src="imagenes/seo-search-symbol.png" width="60" alt="Icono">
+                <img src="imagenes/fotografia.pgn.png" width="60" alt="Icono">
+                <img src="imagenes/photoshop-lightroom.png" width="60" alt="Icono">
+                <img src="imagenes/photoshop.png" width="60" alt="Icono">                
             </section>
-            <section class="fotografia sombra"> <!--Servicio Fotografía-->
-                <img src="./imagenes/edicion-de-fotos.png" width="60">
-                <h3>Estudios</h3>
-                <p>Html5, Css, Sass, Bootstrap, Git, Github, Seo, Google Ads, Wordpress, Fotografía, Photoshop, Lightroom, Composición.</p>
+
+            <section class="fotografia sombra">
+                <h3>Juan Pablo de la Torre Valdez</h3>
+                <div class="estudio" >
+                    <p>Cursando "Desarrollo Web completo"</p>
+                    <p>Terminado "HTML, CSS, SASS, JavaScript, Fetch"</p> 
+                    <p>Cursando "PHP, POO - MVC, MySQL - SQL y API's"</p>
+                </div>
             </section>
-            <section class="ecommerce sombra"> <!--Servicio E-commerce-->
-                <img src="./imagenes/las-compras-en-linea.png" width="60">
-                <h3>E-commerce</h3>
-                <p>Construyo, gestiono y administro Sitios con Tienda Online totalmente responsive, es decir, que podrá verse desde cualquier dispositivo; Tablet, Smartphone u ordenador.</p>
+
+            <section class="ecommerce sombra"> 
+                <h3>Coderhouse</h3>
+                <div class="estudio" >
+                    <p>Cursando "Carrera Desarrollo Full Stack"</p>
+                    <p>Terminado "Desarrollo Web, JavasCript": HTML, CSS, Git, GitHub, Bootstrap, Sass, SEO, JavaScript</p>
+                    <p>Cursando "React Js"</p>
+                    <p>En fila "Programación BackEnd"</p>
+                </div>
             </section>
         </div>
 </main>   
-<!--Seccion SOBRE MI-->
-<section>
-    <h2>Sobre Mi</h2>
-        <div id="sobre-mi" class="contenedor sombra w-sm-100">
-            <div class="contenedor-foto">
-                <img class="img-sobremi" src="imagenes/sobre-mi-min.JPG" width="110rem">
-            </div>
-            <div class="sobre-mi">
-                    <p> <span class="hola"> Hola! Soy </span> <span class="font-titulo"> Yulia Monti</span> 
-                    <br>Soy de la Localidad de Amenábar, Provincia de Santa Fé, Argentina. Allí viví hasta 
-                    los 18 años, año en el que viajé a estudiar Instrumentación Quirúrgica a Capital Federal.
-                    En el año 2008, me recibí como Instrumentadora y conseguí mi primer empleo en la Ciudad de Venado Tuerto, allí viví hasta el año 2012, 
-                    año en el que decidí mudarme a la Ciudad de Rosario, Ciudad en la que actualmente resido. 
-                    <br>Desde que llegué a la Ciudad soy aficionada de la Fotografía, 
-                    la misma llevó a interiozarme sobre Composición y Programas de Edición, 
-                    luego me llevó por el mundo de las Redes Sociales
-                    hasta que conocí el fantástico mundo del Desarrollo Web. Aquí me encuentro ahora, estudiando, capacitandome, 
-                    compartiendo mis saberes, con muchas ganas de aprender. Todavía queda un largo camino por recorrer. </p>
-            </div>
-</section>
-<!--Seccion PROYECTOS--> 
+
 <section> 
         <h2>Mis Proyectos</h2>
         <div id="proyectos">
             <section class="proyecto contenedor sombra w-sm-100">
-                <img class="img-proyecto-sm" src="./imagenes/proyecto-brok.png" width="500">
-                <h3>Brok Electrónica</h3> <!-- Servicio Diseño Web-->
-                <p>Servicio Técnico Oficial de Samsung y Sony</p>
+                <a href="https://brokelectronica.com.ar/" target="_blank">
+                    <img class="img-proyecto-sm" src="imagenes/proyecto-brok.png"  width="500" alt="Imagen de proyecto de Brok Electrónica">
+                </a>
+                <h3>Brok Electrónica</h3> 
+                <p>Servicio Técnico Oficial de Samsung y Sony</p> 
+                <p>Tecnología utilizada: WordPress</p>
             </section>
+
             <section class="proyecto contenedor sombra w-sm-100">
-                <img class="img-proyecto-sm"  src="./imagenes/proyecto-brok.png" width="500">
-                <h3>Brok Electrónica</h3> <!-- Servicio Diseño Web-->
-                <p>Servicio Técnico Oficial de Samsung y Sony</p>
-        </section>
+                <a href="https:yuliamonti.github.io/carple-monti/" target="_blank">
+                    <img class="img-proyecto-sm" src="imagenes/cap-Carple-1.png"  width="500" alt="Imagen de proyecto de Carple Aberturas">
+                </a>
+                <h3>Carple Aberturas</h3>
+                <p>Página no oficial de Carple Aberturas</p> 
+                <p>Tecnología utilizada: HTML y Css</p>
+            </section>
+
+            <section class="proyecto contenedor sombra w-sm-100">
+                <a href="https://yuliamonti.github.io/laWebDeSkay/" target="_blank">
+                    <img class="img-proyecto-sm" src="imagenes/cap-LaWebDeSkay-1.png"  width="500" alt="Imagen de proyecto de La Web de Skay">
+                </a>
+                <h3>La Web de Skay</h3> 
+                <p>Página no oficial de Skay y los Fakires</p> 
+                <p>Tecnología utilizada: Sass y Gulp</p>
+            </section>
     </div>
 </section>       
-<!--Inicio CONTACTO >>> Formulario de contacto -->
-<section>
-        <h2 class="contacto" id="contacto">Contacto</h2>
-        <form class="formulario">
-            <fieldset>
-                <legend> Contactame llenando todos los campos </legend>
-                    <div class="contenedor-campos"><!--contenedor de todos los campor del formulario-->
-                        <div class="campo">
-                            <label> Nombre </label>
-                            <input class="input-text" type="text" placeholder="Tu Nombre">
-                        </div>
 
-                        <div class="campo">
-                            <label>Teléfono</label>
-                            <input class="input-text" type="tel" placeholder="Tu Teléfono">
-                        </div>
-
-                        <div class="campo">
-                            <label>Email</label>
-                            <input class="input-text" type="email" placeholder="Tu E-mail">
-                        </div>
-
-                        <div class="campo">
-                            <label>Mensaje</label>
-                            <textarea class="input-text"></textarea>
-                        </div>
-                    </div> <!--contenedor de todos los campor del formulario-->
-                    <div class="alinear-derecha flex">
-                        <input class="boton w-sm-100 enviar" type="submit" value="Enviar">
-                    </div>
-            </fieldset>
-        </form>
-</section>
-<!--Inicio pie de página FOOTER-->
 <footer class="footer">
-    <p> &copy; Todos los derechos reservados Yulia Monti 2022 </p>
+    <p> &copy; Todos los derechos reservados Yulia Monti 2022 
+        <a href="http://www.linkedin.com/in/yuliamonti" target="_blank"> <img src="imagenes/linkedin.png" width="28"> </a>
+        <a href="https://www.instagram.com/yuliamonti/?hl=es" target="_blank"> <img src="imagenes/instagram.png" width="28"> </a>
+    </p>
 </footer>
+
+<script src="js/app.js"></script>
 </body>
 </html>
