--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </section>
 
             <section class="proyecto contenedor sombra w-sm-100">
-                <a href="https:yuliamonti.github.io/carple-monti/" target="_blank">
+                <a href="https://yuliamonti.github.io/carple-monti/" target="_blank">
                     <img class="img-proyecto-sm" src="imagenes/cap-Carple-1.png"  width="500" alt="Imagen de proyecto de Carple Aberturas">
                 </a>
                 <h3>Carple Aberturas</h3>
