Añadiendo proyecto de Fetch API

--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
                 <p>Página no oficial de Skay y los Fakires</p> 
                 <p>Tecnología utilizada: Sass y Gulp</p>
             </section>
+
+            <section class="proyecto contenedor sombra w-sm-100">
+                <a href="https://yuliamonti.github.io/gif-api/" target="_blank">
+                    <img class="img-proyecto-sm" src="imagenes/gif-app-img.png"  width="500" alt="Imagen de app gif">
+                </a>
+                <h3>Gif App</h3> 
+                <p>App de Gif</p> 
+                <p>Tecnología utilizada: Vite, React, Jest, Fetch y API</p>
+            </section>
     </div>
 </section>       
 
