Agregando proyecto y styles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div>
             <nav class="navegacion-principal flex contenedor"> 
                 <a href="/">Inicio</a>
-                <a href="#sobre-mi">Sobre Mi</a>
+                <a href="#estudios">Estudios</a>
                 <a href="#proyectos">Proyectos</a>
             <!--<a href="#contacto">Contacto</a>--> 
             </nav>
@@ -46,10 +46,20 @@
 </section>
 
 <main> 
-        <h2>Habilidades</h2>
+        <h2 id="estudios">Estudios Finalizados y en Curso</h2>
         <div class="servicios">
+
+            <section class="fotografia sombra">
+                <h3>"Desarrollo Web Completo",<br> Juan Pablo de la Torre Valdez</h3>
+                <div class="estudio" >
+                    <p>Terminado "HTML, CSS, SASS, JavaScript, Fetch".</p> 
+                    <p>Cursando "PHP, POO - MVC, MySQL - SQL y API's".</p>
+                    <h3>"React", Fernando Herrera</h3>
+                    <p>Cursando. </p> 
+                </div>
+            </section>
+
             <section class="diseño-web sombra">
-                <h3 class="habilidades">Adquiridas</h3>
                 <img src="imagenes/html-5.png" width="60" alt="Icono">
                 <img src="imagenes/css.png" width="60" alt="Icono">
                 <img src="imagenes/sass.png" width="60" alt="Icono">
@@ -59,6 +69,7 @@
                 <img src="imagenes/figma.png" width="60" alt="Icono">
                 <img src="imagenes/wordpress.png" width="60" alt="Icono">
                 <img src="imagenes/javascript.png" width="60" alt="Icono">
+                <img src="imagenes/react.png" width="60" alt="Icono">
                 <img src="imagenes/mysql-.png" width="60" alt="Icono">
                 <img src="imagenes/mysql.png" width="60" alt="Icono">
                 <img src="imagenes/nodejs.png" width="60" alt="Icono">
@@ -70,29 +81,19 @@
                 <img src="imagenes/photoshop.png" width="60" alt="Icono">                
             </section>
 
-            <section class="fotografia sombra">
-                <h3>Juan Pablo de la Torre Valdez</h3>
-                <div class="estudio" >
-                    <p>Cursando "Desarrollo Web completo"</p>
-                    <p>Terminado "HTML, CSS, SASS, JavaScript, Fetch"</p> 
-                    <p>Cursando "PHP, POO - MVC, MySQL - SQL y API's"</p>
-                </div>
-            </section>
-
             <section class="ecommerce sombra"> 
-                <h3>Coderhouse</h3>
+                <h3>"Desarrollo Full Stack", <br> CoderHouse</h3>
                 <div class="estudio" >
-                    <p>Cursando "Carrera Desarrollo Full Stack"</p>
-                    <p>Terminado "Desarrollo Web, JavasCript": HTML, CSS, Git, GitHub, Bootstrap, Sass, SEO, JavaScript</p>
-                    <p>Cursando "React Js"</p>
-                    <p>En fila "Programación BackEnd"</p>
+                    <p>Terminado "Desarrollo Web, JavasCript": HTML, CSS, Git, GitHub, Bootstrap, Sass, SEO, JavaScript.</p>
+                    <p>Cursando "React Js".</p>
+                    <p>En fila "Programación BackEnd".</p>
                 </div>
             </section>
         </div>
 </main>   
 
 <section> 
-        <h2>Mis Proyectos</h2>
+        <h2>Proyectos</h2>
         <div id="proyectos">
             <section class="proyecto contenedor sombra w-sm-100">
                 <a href="https://brokelectronica.com.ar/" target="_blank">
