Cambiando estilos y optimizando

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio de Yulia Monti, Desarrolladora Web FullStack, FrontEnd y BackEnd">
+    <meta name="keywords" content="desarrollo web, developer, full stack, FrontEnd, Backend, react, javascript, nodejs, php, wordpress, bootstrap, git, github, mysql, firebase, figma">
     <title>Yulia Monti</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
