Cambiando Estilo a mi portfolio

--- a/html/sobre-mi.html
+++ b/html/sobre-mi.html
@@ -26,7 +26,7 @@
 
         <div>
             <nav class="navegacion-principal flex contenedor">
-                <a href="/" class="subrayar">Inicio</a>
+                <a href="../index.html" class="subrayar">Inicio</a>
             </nav>
         </div>
     </header>
@@ -64,7 +64,7 @@
                 </p>
             </div>
             <div>
-                <a href="/"> <img src="../imagenes/yuAstronauta.png" width="400" height="auto"
+                <a href="../index.html"> <img src="../imagenes/yuAstronauta.png" width="400" height="auto"
                         class="astronauta a-sobre-mi"></a>
             </div>
             <div class="contenedor">
