Cambiando Estilo a mi portfolio

--- a/html/sobre-mi.html
+++ b/html/sobre-mi.html
@@ -20,12 +20,8 @@
 
 <body>
     <header>
-        <div class="mobile-menu">
-            <img src="../imagenes/menu-gris.png" alt="icono menu responsive">
-        </div>
-
         <div>
-            <nav class="navegacion-principal flex contenedor">
+            <nav class=" flex contenedor menuSM">
                 <a href="../index.html" class="subrayar">Inicio</a>
             </nav>
         </div>
@@ -76,5 +72,4 @@
     <footer class="footer">
         <p> &copy; Yulia Monti 2022 </p>
     </footer>
-    <script src="/js/app.js"></script>
 </body>
