Quitando MQ  utlizando grid min-max-clamp

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div>
             <nav class="navegacion-principal flex contenedor">
-                <a href="./index.html" class="subrayar">Inicio</a>
+                <a href="./index.html">Inicio</a>
                 <a href="#proyectos">Proyectos</a>
                 <a href="#estudios"> Tecnologias </a>
                 <a href="https://github.com/yuliamonti" target="_blank"> Repositorio </a>
