--- a/html/sobre-mi.html
+++ b/html/sobre-mi.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section class="hero-sm">
         <div class="sobre-mi">
             <div class="contenedor ml">
                 <h1 class="contenedor titulo-sobre-mi"> Yulia Monti</h1>
