--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="contenido-hero">
             <div class="w-sm-100">
                 <h1 class="titulo-yulia"> Yulia Monti
-                    <br><span class="titulo contenedor animate__animated animate__backInRight"> Web Developer</span>
+                    <br><span class="titulo contenedor"> Web Developer</span>
                 </h1>
                 <h2> Front End</h2>
                 <a href="http://www.linkedin.com/in/yuliamonti" class="boton" target="_blank"> Contactar </a>
