Añadiendo Proyecto Final de React js

--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
             <h3>Proyectos</h3>
             <div id="proyectos">
 
+                <section data-aos="fade-up" class="proyecto fd-r contenedor  w-sm-100">
+                    <div class="contenedor descripcionProyecto">
+                        <h4>E-commerce con React </h4>
+                        <p>Primer App E-commerce utilizando React Js y Firebase como Base de Datos.</p>
+                        <p>Tecnologías utilizadas: React js, Node js, Firebase, Bootstrap, React Router Dom.</p>
+                    </div>
+            
+                    <a href="https://imperfecta-cosmetica-natural.netlify.app/" target="_blank">
+                        <img class="img-proyecto-sm" src="imagenes/cap-imperfecta-png.png" width="500"
+                            alt="Imperfecta Cosmética Natural">
+                    </a>
+                </section>
+
                 <section data-aos="fade-up" class="proyecto contenedor w-sm-100">
                     <a href="https://yuliamonti.github.io/gif-api/" target="_blank">
                         <img class="img-proyecto-sm" src="imagenes/gif-app-img.png" width="500"
