--- a/index.html
+++ b/index.html
@@ -58,17 +58,30 @@
             <h3>Proyectos</h3>
             <div id="proyectos">
 
-                <section data-aos="fade-up" class="proyecto fd-r contenedor  w-sm-100">
+
+                <section data-aos="fade-up" class="proyecto contenedor w-sm-100">
+
+                    <a href="https://imperfecta-cosmetica-natural.netlify.app/" target="_blank">
+                        <img class="img-proyecto-sm" src="imagenes/cap-imperfecta-png.png" width="500"
+                            alt="Imperfecta Cosmética Natural">
+                    </a>
                     <div class="contenedor descripcionProyecto">
                         <h4>E-commerce con React </h4>
                         <p>Primer App E-commerce utilizando React Js y Firebase como Base de Datos.</p>
                         <p>Tecnologías utilizadas: React js, Node js, Firebase, Bootstrap, React Router Dom.</p>
                     </div>
-            
-                    <a href="https://imperfecta-cosmetica-natural.netlify.app/" target="_blank">
-                        <img class="img-proyecto-sm" src="imagenes/cap-imperfecta-png.png" width="500"
-                            alt="Imperfecta Cosmética Natural">
-                    </a>
+                </section>
+
+                <section data-aos="fade-up" class="proyecto contenedor fd-r w-sm-100">
+                    <div class="contenedor descripcionProyecto">
+                        <h4>M.Belén Basso, Kinesióloga</h4>
+                        <p>Landing Pages Licenciada en Kinesiología y Fisiatría</p>
+                        <p>Landing Pages realizada para M. Belén Basso Licenciada en Kinesiología y Fisiatría utilizando
+                            Html, Css y Js.</p>
+                    </div>
+                    <a href="https://yuliamonti.github.io/kinesiologa-mbbasso/" target="_blank">
+                        <img class="img-proyecto-sm" src="imagenes/mbb-kinesiologa.png" width="500"
+                            alt="Landing pages Licenciada M. Belen Basso Kinesióloga y Fisiatra"></a>
                 </section>
 
                 <section data-aos="fade-up" class="proyecto contenedor w-sm-100">
