--- a/index.html
+++ b/index.html
@@ -183,10 +183,8 @@
             <div class="contenedor descripcion-sobre-mi">
                 <h4> Contacto</h4>
                 <b><a class="a-color" href="mailto:yuliamonti@gmail.com" target="_blank"> yuliamonti@gmail.com </a></b>
-                <br><b><a class="a-color" href="https://yuliamonti.github.io/yuliamonti/" target="_blank"> Portfolio
-                    </a></b>
-                <br><b><a class="a-color" href="https://www.linkedin.com/in/yuliamonti" target="_blank">
-                        Linkedin</a></b>
+                <br><b><a class="a-color" href="https://yuliamonti.github.io/yuliamonti/" target="_blank"> Portfolio </a></b>
+                <br><b><a class="a-color" href="https://www.linkedin.com/in/yuliamonti" target="_blank"> Linkedin</a></b>
             </div>
 
             <div>
